Move conv2d fusion to new IntelQuant dialect

--- a/lib/Quantizer/CMakeLists.txt
+++ b/lib/Quantizer/CMakeLists.txt
@@ -25,10 +25,18 @@ add_llvm_library(MLIRQuantizerFxpMathConfig
 add_dependencies(MLIRQuantizerFxpMathConfig
                  MLIRQuantizerSupport)
 
+add_llvm_library(MLIRQuantizerIntelQuantConfig
+  Configurations/IntelQuantConfig.cpp
+
+  ADDITIONAL_HEADER_DIRS
+  )
+add_dependencies(MLIRQuantizerIntelQuantConfig
+                 MLIRQuantizerSupport)
 # Transforms.
 add_llvm_library(MLIRQuantizerTransforms
   Transforms/AddDefaultStatsTestPass.cpp
   Transforms/InferQuantizedTypesPass.cpp
+  Transforms/InferQuantizedTypesIntelPass.cpp
   Transforms/RemoveInstrumentationPass.cpp
   Transforms/Conv2DFusionPass.cpp
 
@@ -36,9 +44,11 @@ add_llvm_library(MLIRQuantizerTransforms
   )
 add_dependencies(MLIRQuantizerTransforms
   MLIRQuantizerFxpMathConfig
+  MLIRQuantizerIntelQuantConfig
   MLIRQuantizerSupport
   MLIRPass)
 target_link_libraries(MLIRQuantizerTransforms
   MLIRQuantizerFxpMathConfig
+  MLIRQuantizerIntelQuantConfig
   MLIRQuantizerSupport
   MLIRPass)
